err/testoob.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/testoob'...
Compiling './lib/python3.5/site-packages/testoob/asserter.py'...
***   File "./lib/python3.5/site-packages/testoob/asserter.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testoob/commandline'...
Compiling './lib/python3.5/site-packages/testoob/commandline/__init__.py'...
***   File "./lib/python3.5/site-packages/testoob/commandline/__init__.py", line 20
    exec "import %s" % module
                   ^
SyntaxError: Missing parentheses in call to 'exec'

Listing './lib/python3.5/site-packages/testoob/compatibility'...
Compiling './lib/python3.5/site-packages/testoob/compatibility/itertools.py'...
***   File "./lib/python3.5/site-packages/testoob/compatibility/itertools.py", line 368
    raise ValueError, "indices for islice() must be positive"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/compatibility/optparse.py'...
***   File "./lib/python3.5/site-packages/testoob/compatibility/optparse.py", line 164
    raise NotImplementedError, "subclasses must implement"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/compatibility/sets.py'...
***   File "./lib/python3.5/site-packages/testoob/compatibility/sets.py", line 94
    raise TypeError, ("BaseSet is an abstract class.  "
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/compatibility/subprocess.py'...
***   File "./lib/python3.5/site-packages/testoob/compatibility/subprocess.py", line 682
    if (GetVersion() >= 0x80000000L or
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/compatibility/textwrap.py'...
***   File "./lib/python3.5/site-packages/testoob/compatibility/textwrap.py", line 19
    (True, False) = (1, 0)
    ^
SyntaxError: can't assign to keyword

Compiling './lib/python3.5/site-packages/testoob/compatibility/trace.py'...
***   File "./lib/python3.5/site-packages/testoob/compatibility/trace.py", line 221
    except (IOError, EOFError, ValueError), err:
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/coverage.py'...
***   File "./lib/python3.5/site-packages/testoob/coverage.py", line 53
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/main.py'...
***   File "./lib/python3.5/site-packages/testoob/main.py", line 85
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/profiling.py'...
***   File "./lib/python3.5/site-packages/testoob/profiling.py", line 31
    print "Profiling information saved to file '%s'" % helper.filename
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/testoob/reporting'...
Compiling './lib/python3.5/site-packages/testoob/reporting/base.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (base.py, line 126)
Compiling './lib/python3.5/site-packages/testoob/reporting/xslt.py'...
***   File "./lib/python3.5/site-packages/testoob/reporting/xslt.py", line 83
    raise Exception,"Unable to find supported XSLT library (4Suite, MSXML)"
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/run_cmd.py'...
***   File "./lib/python3.5/site-packages/testoob/run_cmd.py", line 59
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testoob/running'...
Compiling './lib/python3.5/site-packages/testoob/running/convenience.py'...
***   File "./lib/python3.5/site-packages/testoob/running/convenience.py", line 94
    except KeyboardInterrupt, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/running/listingrunner.py'...
***   File "./lib/python3.5/site-packages/testoob/running/listingrunner.py", line 33
    print self.history.get_string()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/testoob/testing.py'...
***   File "./lib/python3.5/site-packages/testoob/testing.py", line 97
    except exception_class, e:
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/testoob-1.15.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
